<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardMateria"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtAsignatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvAsignaturaHistorial"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/txtNotas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvGrupoHistorial"
            android:textColor="#555555"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/txtPromedio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvPromedioHistorial"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtCondicionHistorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvCondicion"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="end" /> </LinearLayout>

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFecha"
            android:textColor="#777777"
            android:textSize="12sp"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>